css/base.css
html {
  height: 100%;
}

body {
  font-family: "Open Sans", sans-serif;
  font-style: normal;
  font-weight: 400;
  background-color: #ffffff;
  color: #333333;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
  min-height: 100vh;
  transition: 0.3s ease-out;
  -ms-scroll-chaining: none;
      overscroll-behavior: none;
}

h1 {
  font-family: "Playfair Display", sans-serif;
}

.container {
  max-width: 1920px;
  width: 100%;
  height: 100%;
  padding: 0 90px;
  margin: 0 auto;
}

main {
  flex-grow: 1;
  overflow: hidden;
}

footer {
  flex-shrink: 0;
}

input[type=text]::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

input[type=text]::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

input[type=search]::-webkit-search-decoration,
input[type=search]::-webkit-search-cancel-button,
input[type=search]::-webkit-search-results-button,
input[type=search]::-webkit-search-results-decoration {
  display: none;
}

